--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,22 +1,41 @@
 {
-  "name": "svelte-app",
+  "name": "tfg",
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public"
   },
+  "author": "Martín Ordoño Caro <martinordonocaro@gmail.com>",
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@material/typography": "^3.1.0",
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "@smui/button": "^1.0.0-beta.20",
+    "@smui/checkbox": "^1.0.0-beta.21",
+    "@smui/chips": "^1.0.0-beta.21",
+    "@smui/data-table": "^1.0.0-beta.21",
+    "@smui/icon-button": "^1.0.0-beta.21",
+    "@smui/paper": "^1.0.0-beta.21",
+    "@smui/top-app-bar": "^1.0.0-beta.21",
+    "coffeescript": "^2.5.1",
+    "echarts": "^4.8.0",
+    "less": "^3.11.3",
+    "pug": "^3.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
+    "sass": "^1.26.8",
+    "stylus": "^0.54.7",
     "svelte": "^3.0.0",
-    "echarts": "^4.8.0"
+    "typescript": "^3.9.5"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4"
+    "rollup-plugin-postcss": "^3.1.3",
+    "sirv-cli": "^0.4.4",
+    "svelte-preprocess": "^4.0.8",
+    "svelte-routing": "^1.4.2"
   }
 }
