--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@smui/checkbox": "^1.0.0-beta.21",
     "@smui/chips": "^1.0.0-beta.21",
     "@smui/data-table": "^1.0.0-beta.21",
+    "@smui/form-field": "^1.0.0-beta.21",
     "@smui/icon-button": "^1.0.0-beta.21",
     "@smui/paper": "^1.0.0-beta.21",
     "@smui/top-app-bar": "^1.0.0-beta.21",
