--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@smui/form-field": "^1.0.0-beta.21",
     "@smui/icon-button": "^1.0.0-beta.21",
     "@smui/paper": "^1.0.0-beta.21",
+    "@smui/select": "^1.0.0-beta.21",
     "@smui/top-app-bar": "^1.0.0-beta.21",
     "coffeescript": "^2.5.1",
     "echarts": "^4.8.0",
