--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@smui/icon-button": "^1.0.0-beta.21",
     "@smui/paper": "^1.0.0-beta.21",
     "@smui/select": "^1.0.0-beta.21",
+    "@smui/textfield": "^1.0.0-beta.21",
     "@smui/top-app-bar": "^1.0.0-beta.21",
     "coffeescript": "^2.5.1",
     "echarts": "^4.8.0",
@@ -31,10 +32,11 @@
     "rollup-plugin-terser": "^5.1.2",
     "sass": "^1.26.8",
     "stylus": "^0.54.7",
-    "svelte": "^3.0.0",
+    "svelte": "3.15.0",
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "echarts-for-svelte": "^0.1.11",
     "rollup-plugin-postcss": "^3.1.3",
     "sirv-cli": "^0.4.4",
     "svelte-preprocess": "^4.0.8",
