--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "echarts-for-svelte": "^0.1.11",
     "rollup-plugin-postcss": "^3.1.3",
     "sirv-cli": "^0.4.4",
+    "svelte-datatable": "^2.0.1",
     "svelte-preprocess": "^4.0.8",
     "svelte-routing": "^1.4.2"
   }
