control de excepciones

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,16 @@
     "@material/typography": "^3.1.0",
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
-    "@smui/button": "^1.0.0-beta.20",
-    "@smui/checkbox": "^1.0.0-beta.21",
-    "@smui/chips": "^1.0.0-beta.21",
-    "@smui/data-table": "^1.0.0-beta.21",
-    "@smui/form-field": "^1.0.0-beta.21",
-    "@smui/icon-button": "^1.0.0-beta.21",
-    "@smui/paper": "^1.0.0-beta.21",
-    "@smui/select": "^1.0.0-beta.21",
-    "@smui/textfield": "^1.0.0-beta.21",
-    "@smui/top-app-bar": "^1.0.0-beta.21",
+    "@smui/button": "v1.0.0",
+    "@smui/checkbox": "v1.0.0",
+    "@smui/chips": "v1.0.0",
+    "@smui/data-table": "v1.0.0",
+    "@smui/form-field": "v1.0.0",
+    "@smui/icon-button": "v1.0.0",
+    "@smui/paper": "v1.0.0",
+    "@smui/select": "v1.0.0",
+    "@smui/textfield": "v1.0.0",
+    "@smui/top-app-bar": "v1.0.0",
     "coffeescript": "^2.5.1",
     "echarts": "^4.8.0",
     "less": "^3.11.3",
