--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.data.mongodb.database=backend
+spring.data.mongodb.authentication-database=backend
+spring.data.mongodb.auto-index-creation = true
